[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Images/weapon-short.png" type="Texture" id=2]
[ext_resource path="res://Levels/tileset.tres" type="TileSet" id=3]
[ext_resource path="res://Levels/character-re.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/special.gd" type="Script" id=5]
[ext_resource path="res://Levels/character-ai.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Fonts/m5x7.ttf"

[sub_resource type="DynamicFont" id=2]
size = 31
font_data = SubResource( 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[node name="Special" type="Node2D"]
script = ExtResource( 5 )

[node name="TileMapSpecial" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
collision_layer = 1025
format = 1
tile_data = PoolIntArray( 0, 5, 0, 1, 5, 0, 2, 5, 0, 3, 5, 0, 4, 5, 0, 5, 5, 0, 6, 5, 0, 7, 5, 0, 8, 5, 0, 9, 5, 0, 10, 5, 0, 11, 5, 0, 12, 5, 0, 13, 5, 0, 14, 5, 0, 15, 5, 0, 16, 5, 0, 65536, 5, 0, 65537, 5, 0, 65538, 5, 0, 65539, 5, 0, 65540, 5, 0, 65541, 5, 0, 65542, 5, 0, 65543, 5, 0, 65544, 5, 0, 65545, 5, 0, 65546, 5, 0, 65547, 5, 0, 65548, 5, 0, 65549, 5, 0, 65550, 5, 0, 65551, 5, 0, 65552, 5, 0, 131072, 5, 0, 131073, 3, 0, 131074, 3, 0, 131075, 3, 0, 131076, 3, 0, 131077, 3, 0, 131078, 3, 0, 131079, 3, 0, 131080, 3, 0, 131081, 3, 0, 131082, 3, 0, 131083, 3, 0, 131084, 3, 0, 131085, 3, 0, 131086, 3, 0, 131087, 3, 0, 131088, 5, 0, 196608, 5, 0, 196609, 3, 0, 196610, 3, 0, 196611, 3, 0, 196612, 3, 0, 196613, 3, 0, 196614, 3, 0, 196615, 3, 0, 196616, 3, 0, 196617, 3, 0, 196618, 3, 0, 196619, 3, 0, 196620, 3, 0, 196621, 3, 0, 196622, 3, 0, 196623, 3, 0, 196624, 5, 0, 262144, 5, 0, 262145, 3, 0, 262146, 3, 0, 262147, 3, 0, 262148, 3, 0, 262149, 3, 0, 262150, 3, 0, 262151, 3, 0, 262152, 3, 0, 262153, 3, 0, 262154, 3, 0, 262155, 3, 0, 262156, 3, 0, 262157, 3, 0, 262158, 3, 0, 262159, 3, 0, 262160, 5, 0, 327680, 5, 0, 327681, 3, 0, 327682, 3, 0, 327683, 3, 0, 327684, 3, 0, 327685, 3, 0, 327686, 3, 0, 327687, 3, 0, 327688, 3, 0, 327689, 3, 0, 327690, 3, 0, 327691, 3, 0, 327692, 3, 0, 327693, 3, 0, 327694, 3, 0, 327695, 3, 0, 327696, 5, 0, 393216, 5, 0, 393217, 3, 0, 393218, 3, 0, 393219, 3, 0, 393220, 3, 0, 393221, 3, 0, 393222, 3, 0, 393223, 3, 0, 393224, 3, 0, 393225, 3, 0, 393226, 3, 0, 393227, 3, 0, 393228, 3, 0, 393229, 3, 0, 393230, 3, 0, 393231, 3, 0, 393232, 5, 0, 458752, 5, 0, 458753, 3, 0, 458754, 3, 0, 458755, 3, 0, 458756, 3, 0, 458757, 3, 0, 458758, 3, 0, 458759, 3, 0, 458760, 3, 0, 458761, 3, 0, 458762, 3, 0, 458763, 3, 0, 458764, 3, 0, 458765, 3, 0, 458766, 3, 0, 458767, 3, 0, 458768, 5, 0, 524288, 5, 0, 524289, 3, 0, 524290, 3, 0, 524291, 3, 0, 524292, 3, 0, 524293, 3, 0, 524294, 3, 0, 524295, 3, 0, 524296, 3, 0, 524297, 3, 0, 524298, 3, 0, 524299, 3, 0, 524300, 3, 0, 524301, 3, 0, 524302, 3, 0, 524303, 3, 0, 524304, 5, 0, 589824, 5, 0, 589825, 3, 0, 589826, 3, 0, 589827, 3, 0, 589828, 3, 0, 589829, 3, 0, 589830, 3, 0, 589831, 3, 0, 589832, 3, 0, 589833, 3, 0, 589834, 3, 0, 589835, 3, 0, 589836, 3, 0, 589837, 3, 0, 589838, 3, 0, 589839, 3, 0, 589840, 5, 0, 655360, 5, 0, 655361, 3, 0, 655362, 3, 0, 655363, 3, 0, 655364, 3, 0, 655365, 3, 0, 655366, 3, 0, 655367, 3, 0, 655368, 3, 0, 655369, 3, 0, 655370, 3, 0, 655371, 3, 0, 655372, 3, 0, 655373, 3, 0, 655374, 3, 0, 655375, 3, 0, 655376, 5, 0, 720896, 5, 0, 720897, 3, 0, 720898, 3, 0, 720899, 3, 0, 720900, 3, 0, 720901, 3, 0, 720902, 3, 0, 720903, 3, 0, 720904, 3, 0, 720905, 3, 0, 720906, 3, 0, 720907, 3, 0, 720908, 3, 0, 720909, 3, 0, 720910, 3, 0, 720911, 3, 0, 720912, 5, 0, 786432, 5, 0, 786433, 3, 0, 786434, 3, 0, 786435, 3, 0, 786436, 3, 0, 786437, 3, 0, 786438, 3, 0, 786439, 3, 0, 786440, 3, 0, 786441, 3, 0, 786442, 3, 0, 786443, 3, 0, 786444, 3, 0, 786445, 3, 0, 786446, 3, 0, 786447, 3, 0, 786448, 5, 0, 851968, 5, 0, 851969, 3, 0, 851970, 3, 0, 851971, 3, 0, 851972, 3, 0, 851973, 3, 0, 851974, 3, 0, 851975, 3, 0, 851976, 3, 0, 851977, 3, 0, 851978, 3, 0, 851979, 3, 0, 851980, 3, 0, 851981, 3, 0, 851982, 3, 0, 851983, 3, 0, 851984, 5, 0, 917504, 5, 0, 917505, 3, 0, 917506, 3, 0, 917507, 3, 0, 917508, 3, 0, 917509, 3, 0, 917510, 3, 0, 917511, 3, 0, 917512, 3, 0, 917513, 3, 0, 917514, 3, 0, 917515, 3, 0, 917516, 3, 0, 917517, 3, 0, 917518, 3, 0, 917519, 3, 0, 917520, 5, 0, 983040, 5, 0, 983041, 3, 0, 983042, 3, 0, 983043, 3, 0, 983044, 3, 0, 983045, 3, 0, 983046, 3, 0, 983047, 3, 0, 983048, 3, 0, 983049, 3, 0, 983050, 3, 0, 983051, 3, 0, 983052, 3, 0, 983053, 3, 0, 983054, 3, 0, 983055, 3, 0, 983056, 5, 0, 1048576, 5, 0, 1048577, 3, 0, 1048578, 3, 0, 1048579, 3, 0, 1048580, 3, 0, 1048581, 3, 0, 1048582, 3, 0, 1048583, 3, 0, 1048584, 3, 0, 1048585, 3, 0, 1048586, 3, 0, 1048587, 3, 0, 1048588, 3, 0, 1048589, 3, 0, 1048590, 3, 0, 1048591, 3, 0, 1048592, 5, 0, 1114112, 5, 0, 1114113, 5, 0, 1114114, 5, 0, 1114115, 5, 0, 1114116, 5, 0, 1114117, 5, 0, 1114118, 5, 0, 1114119, 5, 0, 1114120, 3, 0, 1114121, 5, 0, 1114122, 5, 0, 1114123, 5, 0, 1114124, 5, 0, 1114125, 5, 0, 1114126, 5, 0, 1114127, 5, 0, 1114128, 5, 0 )

[node name="Label" type="Label" parent="."]
margin_left = 16.0
margin_top = 40.0
margin_right = 255.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 2 )
text = "IT'S DANGEROUS TO GO 
ALONE! TAKE THIS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
visible = false
margin_left = 17.1661
margin_top = 198.982
margin_right = 256.166
margin_bottom = 251.982
custom_fonts/font = SubResource( 2 )
text = "PRESS B TO USE IT"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="aj" parent="." instance=ExtResource( 6 )]
position = Vector2( 135, 128 )
frozen = true

[node name="re" parent="." instance=ExtResource( 4 )]
position = Vector2( 135.296, 259.144 )
collision_layer = 2048
collision_mask = 1024
frozen = true

[node name="ExitArea" type="Area2D" parent="."]
position = Vector2( 136, 280 )
collision_layer = 32
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitArea"]
shape = SubResource( 3 )

[node name="ItemArea" type="Area2D" parent="."]
position = Vector2( 136, 280 )
collision_layer = 32
collision_mask = 2048

[node name="item" type="Sprite" parent="ItemArea"]
position = Vector2( 0, -127 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemArea"]
position = Vector2( -0.388733, -128.274 )
shape = SubResource( 3 )
[connection signal="body_entered" from="ExitArea" to="." method="_on_ExitArea_body_entered"]
[connection signal="body_entered" from="ItemArea" to="." method="_on_ItemArea_body_entered"]
